<resources>
    <string name="app_name">Note X</string>

    <!--    test Add ids-->
    <string name="bannerAdd_general_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitialAdd_textNote_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="interstitialAdd_checkNote_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="delete_note_title_text">"Are you sure you want to delete the note? "</string>
    <string name="delete_note_message_text">Deleted note will go to trash and  if set alarm exists will be canceled</string>
    <string name="delete_note_forever_text">Are you sure you want to permanently delete the note?</string>
    <string name="delete_checknoteitem_message_text">You cannot recover what will be deleted. Do you want to continue?</string>
    <string name="restore_note_message_text">Do you approve the restore of the note?</string>
    <string name="approve_text">Approve</string>
    <string name="cancel_text">Cancel</string>
    <string name="delete_notes_title_text">"Are you sure you want to delete the notes? "</string>
    <string name="delete_notes_message_text">Deleted notes will go to trash and if set alarm exists will be canceled</string>
    <string name="delete_notes_forever_text">Are you sure you want to permanently delete the notes?</string>
    <string name="restore_notes_message_text">Do you approve the restore of the notes?</string>
    <string name="success_text">Success</string>
    <string name="saved_text">Saved</string>
    <string name="unselected_text">Unselected</string>
    <string name="add_text">Add</string>
    <string name="already_exists_text">already exists</string>
    <string name="delete_from_title_text">Are you sure you want to delete</string>
    <string name="book_to_trash_message_text">Notes inside the notebook will be moved to the trash</string>
    <string name="notebook_rename_text">Notebook rename</string>
    <string name="book_add_text">Add notebook</string>
    <string name="enter_notebook_name_text">Enter the notebook name</string>
    <string name="want_to_continue_text">Do you want to continue</string>
    <string name="appear_all_note_text">Notes inside the notebook will appear in the \'All Notes\' section</string>
    <string name="not_appear_all_notes_text">Notes inside the notebook will not appear in \'All Notes\'</string>
    <string name="edit_text">Edit</string>
    <string name="edit_reminder_text">Edit Reminder</string>
    <string name="reminder_setup_later_text">You need to set it to a future time</string>
    <string name="not_repeating_text">Not repeating</string>
    <string name="daily_text">Daily</string>
    <string name="monthly_text">Monthly</string>
    <string name="weekly_text">Weekly</string>
    <string name="ascending_text">Ascending</string>
    <string name="descending_text">Descending</string>
    <string name="show_content_text">Show Content</string>
    <string name="show_tags_text">Show Tags</string>
    <string name="by_edit_time_text">By edit time</string>
    <string name="by_alphabetically_text">By alphabetically</string>
    <string name="by_color_text">By color</string>
    <string name="rename_tag_text">Rename tag</string>
    <string name="add_tag_text">Add Tag</string>
    <string name="enter_tag_name_text">Enter the tag name</string>
    <string name="remove_from_list_text">Remove from list</string>
    <string name="tag_inside_notes_not_deleted_text">Notes in the tag will not be deleted</string>
    <string name="enter_item_name_text">Enter the item name</string>
    <string name="select_book_for_moving_text">Select a notebook for moving</string>
    <string name="select_notebook_for_copying_text">Select a notebook for copying</string>
    <string name="no_book_for_your_trans_text">There is no other notebook available for your transaction</string>
    <string name="select_checklist_for_moving">Select a checkList for moving</string>
    <string name="select_checklist_for_copying">Select a checkList for copying</string>
    <string name="no_checklist_for_your_trans_text">There is no other checkList available for your transaction</string>
    <string name="trash_text">Trash Can</string>
    <string name="empty_trash_text">Empty trash can</string>
    <string name="reminder_text">Reminder</string>
    <string name="note_note_with_reminder">no note with reminder</string>
    <string name="added_note_appear_text">Added notes appear here</string>
    <string name="all_notes_text">All Notes</string>
    <string name="archive_text">Archive</string>
    <string name="move_text">Move</string>
    <string name="copy_text">Copy</string>
    <string name="select_all_text">Select All</string>
    <string name="delete_text">Delete</string>
    <string name="mark_text">Mark</string>
    <string name="unmark_text">Unmark</string>
    <string name="color_text">Color</string>
    <string name="tag_text">Tag</string>
    <string name="pin_text">Pin</string>
    <string name="unpin_text">Unpin</string>
    <string name="restore_text">Restore</string>
    <string name="delete_completely_text">Delete Completely</string>
    <string name="unarchive_text">UnArchive</string>
    <string name="archive_text2">Archive</string>
    <string name="rename_text">Rename</string>
    <string name="show_all_notes_text">Show in all notes</string>
    <string name="hide_all_notes_text">Hide in all notes</string>
    <string name="copy_content_text">Copy Content</string>
    <string name="delete_marked_notes_text">Delete marked notes</string>
    <string name="share_text">Share</string>
    <string name="notebook_text">Notebook</string>
    <string name="settings_text">Settings</string>
    <string name="backups_text">Backup</string>
    <string name="change_view_text">Change View</string>
    <string name="search_in_notes_text">Search in notes</string>
    <string name="undo_text">Undo</string>
    <string name="redo_text">Redo</string>
    <string name="add_item_text">Add item</string>
    <string name="add_to_end_text">Add to end</string>
    <string name="add_to_top_text">Add to top</string>
    <string name="next_text">Next</string>
    <string name="title_text">Title</string>
    <string name="content_text">Content</string>
    <string name="add_reminder_text">Add Reminder</string>
    <string name="date_text">Date</string>
    <string name="time_text">Time</string>
    <string name="choose_note_type_title_text">Choose Note Type</string>
    <string name="sorting_text">Sorting</string>
    <string name="appearance_text">Appearance</string>
    <string name="lang_turkish">Turkish</string>
    <string name="lang_english">English</string>
    <!-- Preference Titles -->
    <string name="save_text">Save</string>
    <string name="sign_in_text">Sign In</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="added_tags_appear_text">Added tags appear here</string>
    <string name="successfully_copied_text">Successfully Copied</string>
    <string name="empty_the_trash_text">Empty the trash can</string>
    <string name="can_not_be_changed_text">Can not be changed</string>
    <string name="no_archived_note_text">No archived notes</string>
    <string name="cloud_backup_text">Cloud Backup</string>
    <string name="form_backup_text">Form Backup</string>
    <string name="load_backup_text">Load Backup</string>
    <string name="backup_path_text">Backup Paths</string>
    <string name="local_backup_text">Local Backup</string>
    <string name="loading_threedot_text">Loading…</string>
    <string name="form_new_cloud_backup_title">Are you sure you want to create a new backup in the cloud?</string>
    <string name="some_backupfile_may_change_text">This action may change some of your backup file</string>
    <string name="loading_backup_text">Loading backup</string>
    <string name="file_read_per_req_text">File read-write permission required</string>
    <string name="no_internet_text">There is not any internet connection</string>
    <string name="must_be_logged_text">Must be logged in</string>
    <string name="cancelled_text">Cancelled</string>
    <string name="logging_in_text">Logging in</string>
    <string name="logging_out_text">Logging Out</string>
    <string name="text_field_not_empty_text">Text field cannot be empty</string>
    <string name="new_text_note">New Text Note</string>
    <string name="new_check_note">New Check Note</string>
    <string name="existing_check_note">Existing Check Note</string>
    <string name="days_free_trial_text"> days free trial</string>
    <string name="ad_free_text">Ad-free</string>
    <string name="empty_backup_text">Empty Backup</string>
    <string name="unexpected_error_text">An unexpected error has occurred</string>
    <string name="successfully_formed_text">Successfully formed</string>
    <string name="unnamed_text">Unnamed</string>
    <string name="something_went_wrong_text">Something went wrong</string>
    <string name="error_text">Error</string>
    <string name="features_text">Features</string>
    <string name="colors_text">Colors</string>
    <string name="ask_last_cloud_backup_download_text">Do you want to download the most recent backup in the cloud?</string>
    <string name="ask_sign_out_text">Are you sure you want to sign out?</string>
    <string name="ask_delete_notes_after_sign_out_text">Your notes in the application will be deleted after the signing out.</string>
    <string name="choice_font_text">Choose Font</string>
    <string name="ask_overrite_backup_text">Do you want the backup file to overwrite the data in the app?</string>
    <string name="info_some_data_may_loss_text">This action may result in loss of data in the application</string>

    <string name="checkList_text">Check List</string>
    <string name="text_text">Text</string>
    <string name="select_language_text">Select Language</string>
    <string name="general_settings_text">General Settings</string>
    <string name="font_size_text">Font Size</string>
    <string name="rate_app_text">Rate App</string>
    <string name="share_app_text">Share App</string>
    <string name="form_auto_cloud_backup_logout_text">Automatically form cloud backup on logout</string>
    <string name="form_auto_local_backup_logout_text">Automatically form local backup on logout</string>
    <string name="very_small_text">Very Small</string>
    <string name="small_text">Small</string>
    <string name="medium_text">Medium</string>
    <string name="large_text">Large</string>
    <string name="very_large_text">Very Large</string>
    <string name="add_note_text">Add Note</string>
    <string name="manage_subscription_text">Manage Subscription</string>
    <string name="premium_info_1_text">*If you participated in the free trial, you cannot join the free trial again. See the start date of the billing period when purchasing the subscription</string>
    <string name="premium_info_2_text">*Unless the subscriptions are canceled; renews monthly for monthly subscription, annually for annually subscription</string>
    <string name="premium_info_3_text">*If you cancel the subscription, no refunds will be given in the current billing period and the subscription will continue during this period. At the end of the billing period, membership ends and payment is not charged again</string>
    <string name="premium_info_4_text">*You can cancel or resume your subscription from the subscriptions section on Google Play</string>


</resources>