<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".views.dialogFragments.PremiumDiaFr" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageClosePre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="7dp"
            android:minWidth="35dp"
            android:minHeight="35dp"
            android:src="@drawable/ic_baseline_close_24" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="7dp"
            android:gravity="center"
            android:text="Premium"
            android:textColor="#AA0707"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/features_text"
            android:textStyle="bold" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerFeaturesPre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:layout_marginBottom="7dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerSubsItemsPre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="150dp"
            android:overScrollMode="never"
            tools:visibility="visible">

        </androidx.recyclerview.widget.RecyclerView>

        <ProgressBar
            android:id="@+id/premiumProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minWidth="70dp"
            android:minHeight="70dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="15dp"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/premium_info1_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/premium_info_1_text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/premium_info2_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/premium_info_2_text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/premium_info3_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/premium_info_3_text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/premium_info4_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/premium_info_4_text"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>