<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/default_background_color"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/backup_card_background_color"
        app:cardCornerRadius="13dp"
        app:cardUseCompatPadding="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="3dp"

            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="7dp"
                android:gravity="center"
                android:text="@string/cloud_backup_text"
                android:textSize="20sp"
                android:textStyle="bold"
                android:drawablePadding="7dp"
                app:drawableStartCompat="@drawable/ic_baseline_cloud_24" />

            <Button
                style="@style/button_backup"
                android:id="@+id/btFormCloudBackup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_backup_text" />

            <Button
                style="@style/button_backup"
                android:id="@+id/btLoadCloudBackup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/load_backup_text" />
            <TextView
                android:id="@+id/text_cloud_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:textStyle="bold"
                android:text=""
                />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/backup_card_background_color"
        app:cardCornerRadius="13dp"
        app:cardUseCompatPadding="true"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="3dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="7dp"
                android:gravity="center"
                android:text="@string/local_backup_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                style="@style/button_backup"
                android:id="@+id/btFormLocalBackup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_backup_text" />

            <Button
                style="@style/button_backup"
                android:id="@+id/btLoadLocalBackup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/load_backup_text" />

            <TextView
                android:id="@+id/text_path_backup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/backup_path_text"
                android:drawablePadding="3dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="13dp"
                app:drawableStartCompat="@drawable/ic_baseline_keyboard_arrow_up_24" />

            <TextView
                android:id="@+id/text_1_path_backup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="13dp"
                android:textSize="12sp"
                android:text="" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/loading_linear_backup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="13dp"
            android:text="@string/loading_threedot_text"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>